<resources>
    <string name="app_name">StudenTable</string>
    <string name="app_title">StudenTable</string>
    <string name="search_school">학교 검색</string>
    <string name="do_search">검색하기</string>
    <string name="do_next">다음으로</string>
    <string name="text_grade">학년</string>
    <string name="text_class">반</string>
    <string name="do_save">저장하기</string>
    <string name="text_breakfast">아침</string>
    <string name="text_lunch">점심</string>
    <string name="text_dinner">저녁</string>
    <string name="text_setSchool">학교 설정하기</string>
    <string name="text_setClass">학년 반 설정하기</string>
    <string name="text_monday">월요일</string>
    <string name="text_tuesday">화요일</string>
    <string name="text_wednesday">수요일</string>
    <string name="text_thursday">목요일</string>
    <string name="text_friday">금요일</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    
    
    
    <string name="web_client_id">1033204306541-gd7hc3h0cbphuj1ftqdlo28dj65b0kh9.apps.googleusercontent.com</string>
</resources>
