<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.meal.MealFragment">

    <TableLayout
        android:id="@+id/tl_time"
        android:layout_width="312dp"
        android:layout_height="424dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_time">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_time_topleft" />

            <TextView
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_monday"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_tuesday"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_wednesday"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_thursday"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_time_topright"
                android:gravity="center"
                android:text="@string/text_friday"
                android:textColor="@color/colorWhiteTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_1"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_11"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_21"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_31"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_41"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_51"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_2"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_12"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_22"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_32"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_42"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_52"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_3"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_13"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_23"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_33"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_43"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_53"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_4"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_14"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_24"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_34"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_44"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_54"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_5"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_15"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_25"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_35"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_45"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_55"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_6"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_16"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_26"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_36"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_46"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_56"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="56dp">

            <TextView
                android:layout_width="32dp"
                android:layout_height="56dp"
                android:background="@drawable/bg_time_bottomleft"
                android:gravity="center"
                android:text="@string/text_7"
                android:textColor="@color/colorWhiteTrue" />

            <TextView
                android:id="@+id/tv_subject_17"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_27"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_37"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_47"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

            <TextView
                android:id="@+id/tv_subject_57"
                android:layout_height="match_parent"
                android:background="@drawable/bg_time_bottomright"
                android:gravity="center"
                android:textColor="@color/colorBlackTrue" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>