<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.set.set.SetClsFragment">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_button_bottom"
        android:text="@string/do_save"
        android:textColor="@color/colorWhiteTrue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/ll_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_grade">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingStart="16sp"
            android:text="@string/text_class"
            android:textColor="@color/colorBlackTrue"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <nl.dionsegijn.steppertouch.StepperTouch
            android:id="@+id/st_class"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:stepperActionsColor="@color/colorPrimary"
            app:stepperActionsDisabledColor="@color/colorBlackTrue"
            app:stepperAllowNegative="true"
            app:stepperAllowPositive="true"
            app:stepperBackgroundColor="@color/colorGray"
            app:stepperButtonColor="@color/colorPrimary"
            app:stepperTextColor="@color/colorWhiteTrue"
            app:stepperTextSize="6sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_grade"
            android:textColor="@color/colorBlackTrue"
            android:textSize="20sp" />

        <nl.dionsegijn.steppertouch.StepperTouch
            android:id="@+id/st_grade"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:stepperActionsColor="@color/colorPrimary"
            app:stepperActionsDisabledColor="@color/colorBlackTrue"
            app:stepperAllowNegative="true"
            app:stepperAllowPositive="true"
            app:stepperBackgroundColor="@color/colorGray"
            app:stepperButtonColor="@color/colorPrimary"
            app:stepperTextColor="@color/colorWhiteTrue"
            app:stepperTextSize="6sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_nameSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:textColor="@color/colorBlackTrue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ll_grade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>